--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,22 @@ body {
     background-color: #ecf0f1;
     height: 100vh; 
 }
+
+.carousel-container {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -170px;
+}
+
+.carousel-container iframe {
+    width: 100%;
+    height: 100%;
+    max-width: 1200px; /* Adjust this value to limit the width of the carousel */
+}
+
 .main-sidebar {
     width: 250px;
     font-family: 'Roboto', sans-serif;
@@ -125,7 +141,7 @@ body {
     align-items: center;
     justify-content: center;
     position: absolute; 
-    top: 50%; 
+    top: 55%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
     font-size: 35px;
