--- a/styles.css
+++ b/styles.css
@@ -240,13 +240,21 @@ body {
     align-items: center; 
     justify-content: flex-start;
     padding-left: 10px;
+    padding-top: 0;
+    padding-bottom: 0;
     background-color: #053856; 
     color: white; 
     text-align: center; 
     border-radius: 3px; 
-    margin-bottom: 10px; 
+    margin-bottom: -8px; 
     cursor: pointer;
     font-size: 15px;
+}
+
+#main-categories {
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 350px;  
 }
 
 .penultimate-category {
