--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'RobotoRegular', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -9,28 +9,22 @@ body {
 }
 
 #carousel-container {
-    width: 95%;
+    width: 98.75%;
     height: 600px;
     display: block;
-    margin-left: 50px; 
-    margin-top: -180px;
+    margin-left: 18px; 
+    position: relative;
+    top: -155px;
 }
 
 #select-category-text {
     text-align: center;
-    font-size: 36px;
+    font-family: 'RobotoRegular', sans-serif;
+    font-size: 120px;
     font-weight: bold;
-}
-
-#final-category-area {
-    flex-grow: 1;
-    padding: 20px;
-    overflow-y: auto;
-    background-color: #ffffff;
-    margin-left: 275px;
-    transition: margin-left 0.1s ease, width 0.1s ease; 
-    width: calc(100% - 300px); 
-    max-height: 100vh;
+    margin-top: -20px; 
+    position: relative; 
+    top: -250px; 
 }
 
 
@@ -39,11 +33,24 @@ body {
     background-color: #053856;
     color: white;
     padding: 20px;
-    transition: none;
-    z-index: 2;
-    overflow-y: auto; 
-    max-height: 100vh; 
     position: fixed;
+    height: 100vh;
+    display: flex;
+    flex-direction: column; 
+    z-index: 9;
+    font-family: 'RobotoBlack', sans-serif;
+}
+
+#main-sidebar h2 {
+    margin: 0;
+    padding: 10px 0;
+    font-size: 24px;
+    text-align: center;
+    position: sticky; 
+    top: 0; 
+    background-color: #053856; 
+    z-index: 10; 
+    font-family: 'RobotoBlack', sans-serif;
 }
 
 #main-sidebar.hidden {
@@ -64,25 +71,23 @@ body {
     background-color: #34495e; 
 }
 
-/* Scrollbar styling for Firefox */
 #main-sidebar {
     scrollbar-width: thin; /* Thin scrollbar */
     scrollbar-color: #85b2c9 #34495e; /* Thumb color and track color */
 }
 
 #penultimate-sidebar {
-    width: 275px;
+    width: 285px;
     height: 100%;
     background-color: #ecf0f1;
     color: black;
-    padding: 20px;
-    position: absolute;
+    position: relative;
     left: 0;
-    transform: translateX(-100%);
-    transition: transform 0.2s ease;
     z-index: 0;
     overflow-y: auto;
     max-height: 100vh;
+    transition: transform 0.2s ease; 
+    font-family: 'RobotoCondensedBold', sans-serif;
 }
 
 /* Penultimate sidebar scrollbar styling */
@@ -91,18 +96,18 @@ body {
 }
 
 #penultimate-sidebar::-webkit-scrollbar-thumb {
-    background-color: #85b2c9; 
+    background-color: #8f8f8f; 
     border-radius: 10px; 
 }
 
 #penultimate-sidebar::-webkit-scrollbar-track {
-    background-color: #34495e; 
+    background-color: transparent; 
 }
 
 /* Scrollbar Firefox */
 #penultimate-sidebar {
-    scrollbar-width: thin; /* Thin scrollbar */
-    scrollbar-color: #85b2c9 #34495e; /* Thumb color and track color */
+    scrollbar-width: thin; 
+    scrollbar-color: #8f8f8f transparent; 
 }
 
 #penultimate-sidebar.visible {
@@ -116,23 +121,21 @@ body {
 }
 
 #penultimate-categories {
-    margin-top: 50px; 
-    margin-bottom:50px;
     padding-top: 10px;  
 }
 
 .sidebar-button {
-    position: absolute;
-    right: 4px; 
-    width: 15px;
+    position: fixed;
+    left: 250px; 
+    width: 25px;
     height: auto;
     opacity: 0.25;
     top: 50%; 
-    transform: translateY(-50%);
+    transform: translateY(-680%);
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    z-index: 2; 
+    z-index: 100; 
 }
 
 .sidebar-button:hover {
@@ -144,10 +147,11 @@ body {
     padding: 20px;
     overflow-y: auto;
     background-color: #ffffff;
-    margin-left: 275px;
-    transition: margin-left 0.1s ease, width 0.1s ease; 
+    margin-left: 20px;
+    padding-top: 20px;  /* Adjust this if necessary */
     width: calc(100% - 300px); 
     max-height: 100vh;
+    font-family: 'RobotoRegular', sans-serif; 
 }
 
 /* Final category area scrollbar styling */
@@ -161,26 +165,28 @@ body {
 }
 
 #final-category-area::-webkit-scrollbar-track {
-    background-color: #34495e; 
+    background-color: transparent; 
 }
 
 /* Scrollbar styling for Firefox */
 #final-category-area {
     scrollbar-width: thin; /* Thin scrollbar */
-    scrollbar-color: #85b2c9 #34495e; /* Thumb color and track color */
+    scrollbar-color: #85b2c9 transparent; /* Thumb color and track color */
 }
 
 #final-categories {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 20px; 
+    justify-content: center;
     justify-items: center; 
+    align-items: center;
     padding-bottom: 20px;
     transition: grid-template-columns 0.1s ease; 
 }
 
 #final-category-area.shifted {
-    margin-left: 540px; 
+    margin-left: 300px; 
     width: calc(100% - 1200px); 
 }
 
@@ -208,6 +214,7 @@ body {
     padding: 10px;
     background-color: #ffffff;
     box-shadow: none; 
+    width: 150px;
 }
 
 #final-categories div:hover {
@@ -234,43 +241,43 @@ body {
 }
 
 .main-category {
-    width: 250px; 
-    height: 35px; 
-    display: flex; 
-    align-items: center; 
-    justify-content: flex-start;
-    padding-left: 10px;
-    padding-top: 0;
-    padding-bottom: 0;
-    background-color: #053856; 
-    color: white; 
-    text-align: center; 
-    border-radius: 3px; 
-    margin-bottom: -8px; 
+    width: 85%; 
+    height: 25px; 
+    padding: 10px;
+    margin-bottom: 8px;
+    background-color: #053856;
+    color: white;
     cursor: pointer;
-    font-size: 15px;
+    border-radius: 3px;
+    text-align: left;
+    transition: background-color 0.2s;
+    font-size: 14px;
 }
 
 #main-categories {
     list-style-type: none;
     padding: 0;
-    margin-bottom: 350px;  
+    margin: 0;
+    flex-grow: 1;
+    overflow-y: auto; 
+    max-height: calc(100vh - 80px); /* Limit height for the category list to allow scrolling */
 }
 
 .penultimate-category {
     width: 250px;
-    height: 30px;
+    height: 32px;
     display: flex;
-    align-items: center; 
     justify-content: flex-start;
-    padding-left: 1px;
+    padding-left: 10px; 
+    align-items: center; 
     background-color: #ecf0f1;
     color: #2d2d2d; 
     text-align: center;
     border-radius: 3px;
     margin-bottom: 10px; 
     cursor: pointer;
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 #search-button {
@@ -354,12 +361,41 @@ li {
     color: white; 
 }
 
+#main-categories::-webkit-scrollbar {
+    width: 8px;
+}
+
+#main-categories::-webkit-scrollbar-thumb {
+    background-color: #85b2c9;
+    border-radius: 10px;
+}
+
+#main-categories::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+/* Scrollbar styling for Firefox */
+#main-categories {
+    scrollbar-width: thin;
+    scrollbar-color: #85b2c9 transparent;
+}
+
 .penultimate-category:hover {
     background-color: #c3c9cb;
     color: #053856; 
 }
 
 #go-back {
-    margin-bottom: 20px;
+    position: relative;  
+    top: 20px; 
+    left: 20px; 
+    margin-bottom: 20px; 
     cursor: pointer;
+    z-index: 10;  
+    background-color: #ecf0f1;  
+    padding: 5px;
+    border-radius: 4px;  
+    border: 1px solid #34495e;  
+    display: block;  
 }
+
