--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     display: block;
     margin-left: 18px; 
     position: relative;
-    top: -155px;
+    top: .1%;
 }
 
 #select-category-text {
@@ -24,7 +24,7 @@ body {
     font-weight: bold;
     margin-top: -20px; 
     position: relative; 
-    top: -250px; 
+    top: 1%; 
 }
 
 
@@ -127,11 +127,10 @@ body {
 .sidebar-button {
     position: fixed;
     left: 250px; 
-    width: 25px;
+    width: 20px;
     height: auto;
     opacity: 0.25;
-    top: 50%; 
-    transform: translateY(-680%);
+    top: 1.9%; 
     padding: 10px 20px;
     border: none;
     cursor: pointer;
